--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "react": "16.3.1",
     "react-native": "0.55.4",
     "react-redux": "^5.0.7",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
+    "babel-preset-react-native": "^4.0.0",
     "eslint-config-rallycoding": "^3.2.0",
     "jest": "22.4.3",
+    "react-native-dotenv": "^0.1.1",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
